--- a/templates/tuned.conf.erb
+++ b/templates/tuned.conf.erb
@@ -5,6 +5,6 @@
 
 [<%= section %>]
 <% params.sort.map do |k,v| -%>
-<%= k %>=<% if v.split(' ').length == 1 %><%= v %><% else %>"<%= v.gsub('"','\"') %>"<% end %>
+<%= k %>=<% if v.to_s.split(' ').length == 1 %><%= v %><% else %>"<%= v.gsub('"','\"') %>"<% end %>
 <% end -%>
 <% end -%>
